Added: stub tests, Fixed: Added internet connection treatment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="invalid_password" translatable="false">Password must be between 3 to 1024 characters</string>
     <string name="or_label" translatable="false">or</string>
     <string name="welcome_message" translatable="false">Hi, <b>%s</b>!\nLogin successfully\n\n\nWelcome.</string>
+    <string name="server_unavailable">Service is currently unavailable. Try again later.</string>
 </resources>
